// $Id$

6.x-4.x-beta1 to ......
------------------------
- Reworked message filtering, now it uses module's own filters, WIP.
- Added format and data field (not used yet) for message templates.

6.x-2.2 to 6.x-4.x-beta1
------------------------
- Extended templates with language and translations
- Major OOP rework: Message, Destination, Send_Method
- Reworked messaging_simple, now it uses its own table
- Support for Anonymous destinations / subscriptions.
- Reorganized modules: new template module, moved debug module to notifications_extra, etc..
- Implemented 7.x like API for static variables,
- API and storage improvements for upcoming multilingual support.
- Added Messaging_Destination class, new dependency on autoload module
- Added messaging_destination table and basic API, see #743008
- Added messaging_static(), Drupal 7 API backport, see #742884
- Improved logging system so it needs to be enabled, see #733176
- Updated translation function to work with latest i18nstrings. New messaging_translate()

6.x-2.1 to 6.x-2.2
-------------------------
- Fixed: removed no caching for filters, #577418
- Fixed: 'aftersend' typo by batje, #508054 
- Added line break default filter on install, by aaronbauman, #516012
- PHPMailer: Added support for libraries API, by markus_petrux, #541938
- Fixed issue with sms sending, #407524
- Strenghtening message filtering, better description, #546116
 
6.x-2.0 to 6.x-2.1
--------------------------
- Fixed: outdated permission in privatemsg module, by askibinski, #491364
- Fixed: message params not properly handled in the store table, by greenSkin, #449112
- Added attachments support for some mail methods, by Dane Powell, #371596
- Added messaging debug test page to messaging settings
- PHPMailer: Added SMTP authentication, by batje, #467438
- Fix to private messaging send method interface, by David Goode

6.x-1.1 to 6.x-2.0
--------------------------
- Added new module, messaging_xmpp, to replace xmppframework xmpp_messaging