@@ -1,5 +1,8 @@
 /* $Id$ */
 
+/**
+ * Format template/fallback navigation box
+ */
 #messaging-template-info #template-description{
   padding-right:2em;
   margin-right:2em;
@@ -10,4 +13,52 @@
   border:1px solid gray;
   margin-right:1em;
   padding-right:1em;
+}
+
+/*
+* Formatting for template administration page. Compress spaces
+*/
+fieldset.messaging-template-part {
+	padding:0;
+	/*margin: 0;*/
+	background:none;
+	/*border:none;*/
+	line-height:100%;
+	font-size:small;
+	padding-top:0;
+	padding-bottom:0;
+	/*border:1px solid red;*/
+}
+
+fieldset.messaging-template-part legend {
+  float:left;
+  margin:0;
+  margin-top:0;
+  font-weight:bold;
+  font-size:small;
+}
+
+.messaging-template-part div.format-select
+{
+  float:right;
+  /*display:inline;*/
+  /*border:1px solid red;*/
+  /*line-height:100%;*/
+  font-size:small;
+  margin-bottom:0;
+  margin-top:-1em;
+  margin-right:4%;
+  padding:0;
+}
+
+.messaging-template-part .format-select .form-item,
+.messaging-template-part .format-select .form-item label,
+.messaging-template-part .format-select .form-item select
+{
+  display:inline;
+  margin-bottom:0;
+  margin-top:0;
+  padding:0;
+  line-height:100%;
+  font-size:10px;
 }
