@@ -32,6 +32,7 @@ function messaging_template_help($path, $arg) {
       if ($arg[0] == 'admin' && $arg[1] == 'messaging' && $arg[2] == 'template' && $arg[3] == 'edit' && ($group = $arg[4])) {
         $output = messaging_template_admin_info($group);
         $output .= '<p>' . t('Leave blank to use the default texts or use \'%empty\' for an empty message part, preventing fallback to default message texts.', array('%empty' => MESSAGING_TEMPLATE_EMPTY)) . '</p>';
+        $output .= '<p>' . t('Optionally you can use Input formats for additional formatting after token replacement. <strong>Using Input formats can be unsafe if you use certain filters</strong> like the PHP filter.') . '</p>';
         return $output;
       }
   }
@@ -146,14 +147,15 @@ function messaging_template_message_part($group, $key, $method, $language, $getd
  */
 function _messaging_template_message_part($group, $method, $language) {
   $templates = array();
-  $result = db_query("SELECT msgkey, message FROM {messaging_message_parts} WHERE type = '%s' AND method = '%s' AND language = '%s'", $group, $method, $language->language);
+  $result = db_query("SELECT * FROM {messaging_message_parts} WHERE type = '%s' AND method = '%s' AND language = '%s'", $group, $method, $language->language);
   while ($part = db_fetch_object($result)) {
-    $templates[$part->msgkey] = $part->message;
+    $templates[$part->msgkey] = $part;
   }
   // If not in db and method is default, get values from modules
   if (empty($templates) && $method == 'default') {
     foreach (messaging_template_message_defaults($group, $language) as $key => $text) {
-      $templates[$key] = is_array($text) ? implode("\n", $text) : $text;
+      $part = (object)array('msgkey' => $key, 'default' => $text, 'format' => 0, 'message' => is_array($text) ? implode("\n", $text) : $text);
+      $templates[$key] = $part;
     }
   }
   return $templates;
@@ -168,9 +170,9 @@ function _messaging_template_message_part($group, $method, $language) {
 function messaging_template_text_part($group, $key, $method, $language) {
   $original_group = $group;
   while ($group) {
-    if ($text = messaging_template_message_part($group, $key, $method, $language)) {
+    if ($part = messaging_template_message_part($group, $key, $method, $language)) {
       // Found template text, check for empty marker and return
-      return $text === MESSAGING_TEMPLATE_EMPTY ? '' : $text;
+      return $part->message === MESSAGING_TEMPLATE_EMPTY ? '' : $part;
     }
     else {
       $group = messaging_template_group_fallback($group);
@@ -285,19 +287,51 @@ function messaging_template_extract_group($filter, $templates) {
  * Do token replacement. 
  * 
  * Uses token_logic if enabled, standard token replacement otherwise
+ * 
+ * @param $text
+ *   String or arry of text parts, that may be strings or template objects
+ * @param $objects
+ *   Array of objects for token replacement
  */
 function messaging_template_text_replace($text, $objects) {
   // Add some token types
   $objects['global'] = NULL;  
+  // Parts may be text or text objects, check them and take out filters to be applied later
+  if (is_object($text)) {
+    $format = !empty($text->format) ? $text->format : NULL;
+    $text = $text->message;
+  }
+  elseif (is_array($text)) {
+    $filters = array();
+    foreach ($text as $key => $part) {
+      if (is_object($part)) {
+        $text[$key] = $part->message;
+        if (!empty($part->format)) {
+          $filters[$key] = $part->format;
+        } 
+      }
+    }
+  }
 
   // Use token_logic if available, http://code.developmentseed.org/token_logic
   // Otherwise use standard contrib token module, http://drupal.org/project/token
   if (module_exists('token_logic')) {
-    return token_logic_replace_multiple($text, $objects);
+    $text = token_logic_replace_multiple($text, $objects);
   }
   else {
-    return token_replace_multiple($text, $objects);
+    $text = token_replace_multiple($text, $objects);
   }
+  // Run filters if needed and return. We use our extra fast messaging_text_check_markup()
+  if (is_array($text) && !empty($filters)) {
+    foreach ($filters as $key => $format) {
+      $text[$key] = messaging_text_check_markup($text[$key], $format);
+    }
+  }
+  elseif (isset($format)) {
+    // This means it was a single object and we have a filter to run
+    $text = messaging_text_check_markup($text, $format);
+  }
+  return $text;
 }
 
 /**
@@ -318,7 +352,7 @@ function messaging_template_language_list() {
  */
 function messaging_template_theme() {
   return array(
-    'messaging_template_admin_texts' => array(
+    'messaging_template_part_text' => array(
       'arguments' => array('element' => NULL),
       'file' => 'messaging_template.admin.inc',
     ),
